--- a/tensor-patcher-gui/Properties/Resources.resx
+++ b/tensor-patcher-gui/Properties/Resources.resx
@@ -202,4 +202,10 @@
   <data name="brick18p" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brick18p.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_error.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
