--- a/tensor-patcher-gui/Properties/Resources.resx
+++ b/tensor-patcher-gui/Properties/Resources.resx
@@ -118,6 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="amygdala1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="amygdala8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\amygdala8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="brick05" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brick05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -210,5 +234,14 @@
   </data>
   <data name="icon_ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_ok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ludek1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ludek1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="obstacle00" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\obstacle00.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="obstacle01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\obstacle01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
