--- a/tensor-patcher-gui/Properties/Resources.resx
+++ b/tensor-patcher-gui/Properties/Resources.resx
@@ -226,8 +226,14 @@
   <data name="brick18p" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brick18p.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brick_amygdala" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brick_amygdala.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="brick_blank" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brick_blank.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brick_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brick_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="brick_brown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\brick_brown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
