--- a/tensor-patcher-gui/Properties/Resources.resx
+++ b/tensor-patcher-gui/Properties/Resources.resx
@@ -340,4 +340,7 @@
   <data name="obstacle01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\obstacle01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="selection" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\selection.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
